add: server stubs
